kubeflow/components/k8s-ingress/ingress.kubeflow.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow
  namespace: istio-system
  annotations:
    nginx.ingress.kubernetes/rewrite-taget: /$1
    # nginx.ingress.kubernetes/auth-snippet: |
    #   proxy_set_header Authorization $http_authorization;
    #   proxy_pass_header Authorization;
    # nginx.ingress.kubernetes/configuration-snippet: |
    #   proxy_set_header Authorization $http_authorization;
    #   proxy_pass_header Authorization;
spec:
  ingressClassName: nginx
  rules:
  - host: kubeflow.geniouslab.io
    http:
      paths:
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 80
      - pathType: Prefix
        path: /kserve-endpoints/(.*)
        backend:
          service:
            name: istio-ingressgateway
            port: 
              number: 80
  # tls:
  # - hosts:
  #   - kubeflow.geniouslab.io
  #   # secretName: istio-ingressgateway-certs
  #   secretName: routing-serving-certs
